2019-11-11  Thomas Schwinge  <thomas@codesourcery.com>

	* gfortran.dg/goacc/common-block-1.f90: Fix OpenACC directives
	nesting.
	* gfortran.dg/goacc/common-block-2.f90: Likewise.

2019-11-11  Jiufu Guo  <guojiufu@linux.ibm.com>

	PR tree-optimization/88760
	* gcc.dg/pr59643.c: Update back to r277550.

2019-11-10  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/92123
	* gfortran.dg/bind_c_procs_3.f90 : New test.
	* gfortran.dg/ISO_Fortran_binding_15.c : New test.
	* gfortran.dg/ISO_Fortran_binding_15.f90 : Additional source.

2019-11-09  Jan Hubicka  <hubicka@ucw.cz>

	* gcc.dg/tree-ssa/pr46076.c: Make tested code hot.

2019-11-09  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/92401
	* g++.dg/opt/pr92401.C: New test.

2019-11-09  Thomas Koenig  <tkoenig@gcc.gnu.org>

	PR fortran/92321
	* gfortran.dg/matmul_blas_2.f90: New test.

2019-11-09  Jakub Jelinek  <jakub@redhat.com>

	* gfortran.dg/dec_char_conversion_in_assignment_4.f90: Use
	dg-do compile instead of dg-do run.
	* gfortran.dg/dec_char_conversion_in_data_3.f90: Likewise.

2019-11-08  Marek Polacek  <polacek@redhat.com>

	PR c++/92215 - flawed diagnostic for bit-field with non-integral type.
	* g++.dg/diagnostic/bitfld4.C: New test.

2019-11-08  Marek Polacek  <polacek@redhat.com>

	PR c++/92058 - constinit malfunction in static data member.
	* g++.dg/cpp2a/constinit15.C: New test.

2019-11-08  Mark Eggleston  <mark.eggleston@codethink.com>
	    Jim MacArthur  <jim.macarthur@codethink.co.uk>

	* gfortran.dg/dec_char_conversion_in_assignment_1.f90: New test.
	* gfortran.dg/dec_char_conversion_in_assignment_2.f90: New test.
	* gfortran.dg/dec_char_conversion_in_assignment_3.f90: New test.
	* gfortran.dg/dec_char_conversion_in_assignment_4.f90: New test.
	* gfortran.dg/dec_char_conversion_in_assignment_5.f90: New test.
	* gfortran.dg/dec_char_conversion_in_assignment_6.f90: New test.
	* gfortran.dg/dec_char_conversion_in_assignment_7.f90: New test.