@@ -1,3 +1,11 @@
+2019-11-11  José Rui Faustino de Sousa  <jrfsousa@gmail.com>
+
+	PR fortran/92142
+	* gcc/testsuite/gfortran.dg/ISO_Fortran_binding_16.c: New.
+	* gcc/testsuite/gfortran.dg/ISO_Fortran_binding_16.f90: New.
+	* gcc/testsuite/gfortran.dg/ISO_Fortran_binding_10.c: Correct
+	upper bounds for case 0.
+
 2019-11-11  Thomas Schwinge  <thomas@codesourcery.com>
 
 	* gfortran.dg/goacc/common-block-1.f90: Fix OpenACC directives
